# adaptive-trust-membrane

./: .gitignore  Empty  Installation  Invalid  Proposed  Quick  README.md  Repository  Security  Versioning  pyproject.toml
membrane_interface/: spec.md
scripts/: load_simulation.py
src/adaptive_trust_membrane/: __init__.py  logging_config.py  models.py
src/adaptive_trust_membrane/context_complexity/: __init__.py  classifier.py
src/adaptive_trust_membrane/membrane_interface/: __init__.py  api.py
src/adaptive_trust_membrane/metacognition/: __init__.py  hooks.py
src/adaptive_trust_membrane/predictive/: __init__.py  trajectory.py
src/adaptive_trust_membrane/trust_calibration/: __init__.py  engine.py
